# gnome-shell-extensions

./: meson.build  meson_options.txt
data/: gnome-classic.session.conf  meson.build
extensions/auto-move-windows/: prefs.js
extensions/user-theme/: prefs.js
extensions/window-list/: prefs.js
extensions/workspace-indicator/: prefs.js
